[rtt-65] assign instructors horizontal scroll issue (#1763)
* give term cells more space

* add horizontal scrolling for table content

* set sidebar scroll to auto

* set sidebar menu color

--- a/app/assignment/css/assignments.css
+++ b/app/assignment/css/assignments.css
@@ -111,10 +111,10 @@
 	padding: 8px;
 	font-size: 12px;
 	border: 1px solid #ebebeb;
+	min-width: 200px;
 }
 .term-cell {
 	flex: 1 0 200px;
-  max-width: 200px;
 }
 
 .description-cell, .course-description-cell {
@@ -967,6 +967,8 @@ li.active-term .dropdown-term-row {
 
 .assignments-container .main-content {
 	display: block;
+	overflow-x: auto;
+	height: calc(100vh - 127px);
 }
 
 .assignments-container .filter-container {
